<resources>
    <string name="app_name">FirebaseDemo</string>
    <string name="register_here">Register here</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_mobile">Enter your mob num</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="register">Register</string>
    <string name="send_otp">Send OTP</string>
    <string name="register_here_using_mobile">Register here using mobile</string>
    <string name="verify_otp">Veirify OTP here</string>
    <string name="enter_otp">Enter otp</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="more">-------- More sign in options ---------</string>
    <string name="crash_app">Crash app</string>
    <string name="enter_desc">Enter Desc</string>
    <string name="save">Save</string>
    <string name="whatsapp">Chatitng like whatsapp</string>
    <string name="login_here">Login here...</string>
    <string name="enter_age">Enter age</string>
    <string name="login">Login</string>
    <string name="enter_mobile_num">Enter mobile number</string>
    <string name="sender">Facebook</string>
    <string name="global_warming">Global warming increasing day by day</string>
    <string name="time">10:40 AM</string>
    <string name="email_list">Email listing screen</string>
    <string name="chatting_list">Chatting list screen</string>
    <string name="grid_list">Grid design</string>
    <string name="hey">Hey how are you?</string>
    <string name="delete">Delete</string>
    <string name="gmail">Gmail list screen</string>
    <string name="grid">notes app like grid</string>
    <string name="enter_message">Enter message</string>
    <string name="confirm_delete">Are you sure to delete?</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_description">Enter description</string>
    <string name="add_note">Add note</string>
    <string name="last_order">Regarding Last order?</string>
    <string name="hi_from_chat_bot">Hi, I am chatBot,\n How may i help you? \n Please select the suitable option for you.</string>
</resources>