<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="#F3FBFF"
    android:padding="10dp">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/register_here"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:hint="@string/enter_email"
        android:textColor="#130000"
        android:textColorHint="#670404"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#130000"
        android:textColorHint="#670404"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgressBar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/green"
        app:indicatorDirectionCircular="clockwise"
        app:indicatorSize="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackColor="@color/red"
        app:trackThickness="20dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#D61D1D"
        android:fontFamily="monospace"
        android:hint="@string/enter_email"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/more"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnPhone" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnPhone"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@color/white"
        android:src="@drawable/ic_baseline_local_phone_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPhone" />


    <Button
        android:id="@+id/btnCrashApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crash_app"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>