<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="#F3FBFF"
    android:padding="10dp">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/register_here_using_mobile"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:hint="@string/enter_mobile"
        android:textColor="#130000"
        android:textColorHint="#670404"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@+id/circularProgressBar" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/circularProgressBar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/green"
        app:indicatorDirectionCircular="clockwise"
        app:indicatorSize="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackColor="@color/red"
        app:trackThickness="20dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#D61D1D"
        android:fontFamily="monospace"
        android:text="@string/send_otp"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@+id/edPhone" />


</androidx.constraintlayout.widget.ConstraintLayout>